--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-.DS_Store
-node_modules
-/build
-/.svelte-kit
-/package
-.env
-.env.*
-!.env.example
-vite.config.js.timestamp-*
-vite.config.ts.timestamp-*
-/venv
+/client/.DS_Store
+/client/node_modules
+/client/build
+/client/.svelte-kit
+/client/package
+/client/.env
+/client/.env.*
+/client/!.env.example
+/client/vite.config.js.timestamp-*
+/client/vite.config.ts.timestamp-*
+/server/venv
