--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/adapter-vercel": "^5.3.0",
 		"daisyui": "^4.10.1",
 		"svelte-add": "2024.4.9-0.0"
 	}
